syntax = "proto3";

option go_package = "microservice-test/proto/price";

package price;

service PriceService {
  rpc GetPrice(PriceRequest) returns (PriceResponse);
}

message PriceRequest {
  string date = 1;
}

message PriceResponse {
  string date = 1;
  int64 price = 2;
}